force-app/main/default/objects/docex__CB_DocumentExtractor__c/docex__CB_DocumentExtractor__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Document Extractor</description>
    <label>CB_DocumentExtractor</label>
</CustomObject>