force-app/main/default/objects/docex__CB_DocumentExtractor__c/fields/docex__DownloadUrlTemplate__c.field-meta.xml
<CustomField>
    <fullName>docex__DownloadUrlTemplate__c</fullName>
    <defaultValue>&quot;{0}&quot;</defaultValue>
    <description>Template to apply to links before they are downloaded</description>
    <inlineHelpText>Original link is {0}</inlineHelpText>
    <label>DownloadUrlTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>