force-app/main/default/objects/docex__CB_DocumentExtractor__c/fields/docex__Email_Attachment_Support__c.field-meta.xml
<CustomField>
    <fullName>docex__Email_Attachment_Support__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables support for email attachments by the creation of temporary (tmp) files on EmailMessage objects</description>
    <inlineHelpText>If disabled, files attached to emails cannot be stubbed</inlineHelpText>
    <label>Email Attachment Support</label>
    <type>Checkbox</type>
</CustomField>