force-app/main/default/objects/docex__CB_DocumentExtractor__c/fields/docex__PushNotification__c.field-meta.xml
<CustomField>
    <fullName>docex__PushNotification__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>Which push notification system should be used</description>
    <inlineHelpText>Set to &quot;None&quot; to prevent any push notifications</inlineHelpText>
    <label>PushNotification</label>
    <length>64</length>
    <type>Text</type>
</CustomField>