force-app/main/default/objects/docex__CB_DocumentExtractor__c/fields/docex__ServiceUser__c.field-meta.xml
<CustomField>
    <fullName>docex__ServiceUser__c</fullName>
    <description>The ID of the Service User account</description>
    <label>ServiceUser</label>
    <length>18</length>
    <type>Text</type>
</CustomField>